--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-title: ཨྱོན་སྨིན་གྲོལ་གླིང་གི་དཔེ་ཀློག་སྒེའུ་ཁུང་།
+title: འོག་མིན་ཨྱོན་སྨིན་གྲོལ་གླིང་གི་དཔེ་ཀློག་སྒེའུ་ཁུང་།
